Close #4 - Switch over to Glide

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 .DS_Store
-tasks/godobin-1.4.5
 go-requester
-tasks/tasks
 pkg
 bin
 .Dockerfile.swp
 .Godofile.go.swp
-vendor/src
+vendor
 bin
 pkg
 *_rsa
+tasks/godobin*
